Refactoring Variant